# llvm-loader

./: README.md
load/: CMakeLists.txt  ELF64-loader.cpp
load/MC/: MCDwarf.cpp
load/Object/: Archive.cpp
load/Support/: ErrorHandling.cpp  Host.cpp  regcomp.c
load/Support/Unix/: Host.inc  Path.inc  Process.inc
load/include/: CMakeLists.txt
load/llvm/Config/: config.h
load/llvm/Support/: DataTypes.h
loader/: CMakeLists.txt  ELF64-loader.cpp  add_headers.cmake
loader/Bitcode/: BitcodeReader.cpp
loader/ExecutionEngine/RuntimeDyld/: RTDyldMemoryManager.cpp
loader/Support/Unix/: Memory.inc
loader/include/: Object.h  Types.h
loader/include/ADT/: ArrayRef.h  DenseMapInfo.h  Hashing.h  Optional.h  PointerIntPair.h  PointerUnion.h  STLExtras.h  SmallPtrSet.h  SmallString.h  SmallVector.h  StringExtras.h  StringMap.h  StringRef.h  StringSwitch.h  Triple.h  Twine.h
loader/include/MC/: SubtargetFeature.h
loader/include/Object/: Archive.h  Binary.h  COFF.h  COFFImportFile.h  ELF.h  ELFObjectFile.h  ELFTypes.h  Error.h  IRObjectFile.h  MachO.h  MachOUniversal.h  ObjectFile.h  SymbolicFile.h
loader/include/Support/: AlignOf.h  Allocator.h  CBindingWrapping.h  COFF.h  Casting.h  CommandLine.h  Compiler.h  DataTypes.h  ELF.h  Endian.h  Error.h  ErrorHandling.h  ErrorOr.h  FileSystem.h  Format.h  Host.h  MachO.h  ManagedStatic.h  MathExtras.h  Memory.h  MemoryBuffer.h  Mutex.h  MutexGuard.h  Path.h  PointerLikeTypeTraits.h  Process.h  Program.h  SwapByteOrder.h  Threading.h  TimeValue.h  circular_raw_ostream.h  raw_ostream.h  type_traits.h
loader/include/llvm/Config/: llvm-config.h
loader/lib/MC/: SubtargetFeature.cpp
loader/lib/Object/: Binary.cpp  COFFObjectFile.cpp  ELF.cpp  ELFObjectFile.cpp  Error.cpp  Object.cpp  ObjectFile.cpp  SymbolicFile.cpp
loader/lib/Support/: Debug.cpp  Error.cpp  ErrorHandling.cpp  SmallVector.cpp  raw_ostream.cpp
loader/llvm/IR/: CMakeLists.txt
loader/llvm/Object/: ELF.h  ELFObjectFile.h
loader/llvm/Support/: ErrorOr.h
parser/: CMakeLists.txt
parser/Bitcode/: BitcodeWriter.cpp
parser/Support/: CommandLine.cpp
parser/Support/Unix/: Program.inc  Signals.inc  Unix.h
parser/llvm/IR/: Attributes.h
parser/llvm/Support/: Error.h
